Adjusted Digital Transfer option transfer size to output GCO:Real rather than characterString.  Minor update to help pages.

--- a/EME4xHelpUncompiled/Eme4xHelp/t2_distDTO.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t2_distDTO.html
@@ -4,7 +4,7 @@
 </head><body>
 <h1>EPA Metadata Editor (EME)</h1>
 <h2>Interface Element Description: Tab 2 - Digital Transfer Options</h2>
-<blockquote> Mandatory element</blockquote>
+<blockquote> Optional element; however, if this element is included, "Linkage" and "Function" are required elements.</blockquote>
 <h3>EPA Requirement/Guidance</h3>
 <blockquote>
   <p>This section provides information about the technical means and media by which a resource is obtained from the distributor.  There are two resource options: online or offline. The following elements are included in this section:</p>
